[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "themis_submitter"
version = "1.0"
dependencies = [
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "beautifulsoup4==4.12.2",
]
authors = [
	{ name="Wiktor Ogrodnik", email="wiktor2800-o@outlook.com" },
]
description = "Command-line tool to test your solutions in the best on-line problem judge - themis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
themis_submitter = "themis_submitter:main"

[project.urls]
"Homepage" = "https://github.com/WiktorOgrodnik/themis_submitter"
"Bug Tracker" = "https://github.com/WiktorOgrodnik/themis_submitter/issues"
